# blackroad

./: .agent-identity.json  .env.example  .gitignore  .gitmodules  .prettierignore  AGENT_IDENTITY.json  BLACKROAD_SOVEREIGN_DNS.conf  BR_CLI_TOOLS_CREATED.md  BR_CLI_TOOLS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  FORENSIC_TRACE.md  IDENTITY.md  INTEGRATIONS.md  LUCIDIA_REVERSE_OWNERSHIP_CLAIM.md  ONBOARDING.md  ORGS_INDEX.md  PLANNING.md  PROVIDER_LIABILITY_LEDGER.md  README.md  ROADCHAIN_LIABILITY_RECORD.md  ULTIMATE_FEATURES.md  UPLOAD_INSTRUCTIONS.md  boot-api.sh  br  br-agent.sh  br-cert.sh  br-domain.sh  br-health.sh  br-memory.sh  br-pr.sh  br-queue.sh  br-release.sh  br-status.sh  br-worker.sh  carpool.sh  cece-profile.json  deploy-5-workers.sh  (+10 more)
.agent/: CLAUDE.md  identity.json
.agents/: alice.json  aria.json  cecilia.json  dev.json  gematria.json  lucidia.json  main.json  octavia.json  olympia.json  shellfish.json
.github/: CODEOWNERS  FUNDING.yml  agent.json  pull_request_template.md
.lucidia/: settings.local.json
agents/: branch-registry.json  manifest.json  org-registry.json
blackroad-cli-rs/: Cargo.toml  README.md
blackroad-cli-rs/src/: main.rs  shell.rs  tui.rs  watch.rs
blackroad-core/: package.json
blackroad-ios/: Package.swift  README.md
blackroad-os/: index.html
blackroad-web/: styles.css
cli-scripts/: GIT_PUSH_INSTRUCTIONS.sh  hub.sh
codex-memory/: brief.md  current-session.json
coordination/: DOMAIN_BUILD_MANIFEST_2026.md  broadcast-message.json
failover/: 404.html  index.html  status.html
lib/: errors.sh  ollama.sh  services.sh
math-disproof/: math-is-people.md
mcp-bridge/: start.sh
memory/: current-session.json
orgs/: CLONE_LOG.txt
orgs/blackroad-os/roadrepl/: README.md  pyproject.toml
orgs/blackroad-os/roadrepl/src/roadrepl/: __init__.py  repl.py
orgs/core/blackroad-agent-os/: .prettierignore  CLAUDE.md  pyproject.toml
orgs/core/blackroad-agent-os/tests/: conftest.py  test_agent_config.py  test_agent_models.py  test_models.py  test_safety.py  test_scheduler.py
scripts/: Caddyfile.pi  GDRIVE_SETUP.md  backup-all.sh  blackroad-server.py  branch-agent-identity.sh  cece-memory-compaction.sh  clone-all-orgs.sh  cloudflare-dns-pi-setup.sh  deploy-all-workers.sh  deploy-license-all-orgs.sh  deploy-when-pis-online.sh  deploy-workers.sh  deploy-wrangler-from-pi.sh  enterprise-upstream-sync.sh  failover-setup.md  fix-orgs-remotes.sh  fleet-deploy.sh  fleet-status.sh  gdrive-sync-setup.sh  gdrive-sync.sh  generate-all-workers.sh  hf-push-now.sh  huggingface-agent-setup.sh  install-blackboxprogramming-webhook.sh  install-caddy-pi.sh  install-runner.sh  integrate-all-platforms.sh  nightly-memory-sync.sh  org-cohesion-full.sh  org-cohesion-sync.sh  org-cohesion.sh  pi-deploy-all.sh  pi-domain-hosting-setup.sh  pi-failover-check.sh  pixel-pi-bridge.sh  project-sync.sh  push-workers-to-repos.sh  refresh-wrangler-auth.sh  secrets-audit.sh  setup-deploy-keys.sh  (+19 more)
src/: index.js  index.ts
tools/: TOOLS_INDEX.md  agent-watch.sh
websites/: deploy.sh
wrangler-configs/: agents-api.toml  api-edge.toml  command-center.toml  (+3 more)
(+1998 files in other folders)
