[package]
name = "br-rs"
version = "0.1.0"
edition = "2021"
description = "BlackRoad OS CLI — Rust rewrite"
authors = ["BlackRoad OS <alexa@blackroad.io>"]

[[bin]]
name = "br-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
crossterm = "0.27"
colored = "2"
