[project]
name = "roadrepl"
version = "0.1.0"
description = "Interactive shell framework for BlackRoad OS - Build custom REPLs with history, completions, and scripting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "BlackRoad OS", email = "blackroad.systems@gmail.com"}
]
keywords = ["repl", "shell", "interactive", "cli", "blackroad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
rich = [
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/BlackRoad-OS/roadrepl"
Documentation = "https://github.com/BlackRoad-OS/roadrepl#readme"
Repository = "https://github.com/BlackRoad-OS/roadrepl.git"
Issues = "https://github.com/BlackRoad-OS/roadrepl/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roadrepl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
